@@ -9,32 +9,31 @@ from Products.PortalTransforms.libtransforms.commandtransform \
 import os
 
 XSL_STYLESHEET = os.path.join(
-  os.getcwd(), os.path.dirname(__file__), './sx2ml/main_html.xsl')
+  os.getcwd(), os.path.dirname(__file__), 'sx2ml', 'main_html.xsl')
 
 class ooo_to_html(commandtransform):
     __implements__ = itransform
 
-    __name__ = "ooo_to_html"
+    __name__ = 'ooo_to_html'
     inputs = ('application/vnd.sun.xml.writer',
               'application/vnd.sun.xml.impress', 
               'application/vnd.sun.xml.calc')
     output = 'text/html'
-
-    #binaryName = "pdftohtml"
-    #binaryArgs = "-noframes"
-
-    #def __init__(self):
-    #    commandtransform.__init__(self, binary=self.binaryName)
 
     def convert(self, data, cache, **kwargs):
         kwargs['filename'] = basename((kwargs.get('filename') or 'unknown.pdf'))
 
         tmpdir, fullname = self.initialize_tmpdir(data, **kwargs)
         html = self.invokeCommand(tmpdir, fullname)
-        path, images = self.subObjects(os.path.join(tmpdir, 'Pictures'))
-        objects = {}
-        if images:
-            self.fixImages(path, images, objects)
+
+        subObjectsPaths = [tmpdir, os.path.join(tmpdir, 'Pictures')]
+        for subObjectsPath in subObjectsPaths:
+            if os.path.exists(subObjectsPath):
+                path, images = self.subObjects(subObjectsPath)
+                objects = {}
+                if images:
+                    self.fixImages(path, images, objects)
+
         self.cleanDir(tmpdir)
         cache.setData(html)
         cache.setSubObjects(objects)
@@ -49,12 +48,13 @@ class ooo_to_html(commandtransform):
             tmpdir, XSL_STYLESHEET, sansext(fullname), sansext(fullname))
         os.system(cmd)
         try:
-            htmlfile = open("%s/%s.html" % (tmpdir, sansext(fullname)), 'r')
+            htmlfile = open(os.path.join(tmpdir, "%s.html" % sansext(fullname)),
+                            'r')
             html = htmlfile.read()
             htmlfile.close()
         except:
             try:
-                return open("%s/error_log" % tmpdir, 'r').read()
+                return open(os.path.join(tmpdir, 'error_log'), 'r').read()
             except:
                 return ''
         return html
