@@ -6,7 +6,10 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- Made the transforms look for sub-objects in a sub-directory only if such a
+  sub-directory exists. The previous implementation had the effect that only
+  transforms which had files with images in sub-directories could work.
+
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
